--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ h1 {
 
 /* Status Panel
 ----------------------------------------- */
-.status-panel {
+#status-panel {
 	width: 290px;
 	position: absolute;
 	top: 50px;
@@ -68,7 +68,7 @@ h2 {
 	margin-bottom: 8px;
 }
 
-.period {
+#period {
 	display: block;
 	width: 120px;
 	padding-top: 12px;
@@ -87,7 +87,7 @@ h2 {
 
 /* Circle
 ----------------------------------------- */
-.circle-area {
+#circle-area {
 	display: block;
 	width: 302px;
 	height: 438px; /* (1136|960)/2-40px(header)-50px(ad)-40px(status) */
@@ -98,10 +98,10 @@ h2 {
 
 .done, .delay, .yet {
 	display: inline-block;
+	position: relative;
 	width: 38px;
 	height: 38px;
 	margin: 0 8px 8px 0;
-	-webkit-border-radius: 50%;
 	border-radius: 50%;
 }
 
@@ -114,6 +114,38 @@ h2 {
 .yet {
 	background-color: #e3e3dd;
 }
+
+.done_15min, .done_30min, .done_45min {
+	display: inline-block;
+	width: 0;
+	height: 0;
+	border: 19px solid #00bce3;
+	position: absolute;
+}
+
+.done_15min {
+	border-right: none;
+	border-bottom: none;
+	border-top-left-radius: 100%;
+}
+.done_30min {
+	border-right: none;
+	border-top-left-radius: 19px;
+	border-bottom-left-radius: 19px;
+
+}
+.done_45min {
+	width: 0;
+	height: 0;
+	border-right: 19px solid transparent;
+	border-top-left-radius: 19px;
+	border-top-right-radius: 19px;
+	border-bottom-left-radius: 19px;
+	border-bottom-right-radius: 19px;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+}
+
 
 
 /* AD Space
